feat: apply changes

--- a/app/javascript/styles/mastodon/accounts.scss
+++ b/app/javascript/styles/mastodon/accounts.scss
@@ -1,3 +1,28 @@
+.bg-profile {
+  display: none;
+}
+
+@supports (filter: blur(8px)) {
+  .bg-profile {
+      display: block;
+      filter: blur(8px);
+      height: 100%;
+      left: 0;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: -1;
+
+      .bg-profile-img {
+          background-size: cover;
+          background-position: center;
+          height: calc(100% + 30px);
+          margin: -15px;
+          width: calc(100% + 30px);
+      }
+  }
+}
+
 .card {
   & > a {
     display: block;
