--- a/app/views/accounts/_header.html.haml
+++ b/app/views/accounts/_header.html.haml
@@ -1,5 +1,6 @@
 .bg-profile
-  .bg-profile-img{ style: "background-image: url(#{@account.header_static_url})" }
+  .bg-profile-img 
+    = image_tag (account.header_static_url)
 
 .public-account-header{:class => ("inactive" if account.moved?)}
   .public-account-header__image
