--- a/app/views/accounts/_header.html.haml
+++ b/app/views/accounts/_header.html.haml
@@ -1,6 +1,5 @@
 .bg-profile
-  .bg-profile-img 
-    = image_tag (account.header_static_url)
+  = image_tag (account.header_static_url), class: 'bg-profile-img'
 
 .public-account-header{:class => ("inactive" if account.moved?)}
   .public-account-header__image
